Fix flash zone padding too large

--- a/init/static/css/base.css
+++ b/init/static/css/base.css
@@ -716,7 +716,7 @@ html {
 }
 
 .flash {
-	padding: 3em;
+	padding: 1rem;
 }
 
 div.error {
